# sqlate

./: .gitignore  CMakeLists.txt  LICENSE.LGPL.txt  PostgresSchema.cpp  PostgresSchema.h  README.md  SchemaUpdater.cpp  SchemaUpdater.h  Sql.h  SqlCondition.cpp  SqlCondition.h  SqlConditionalQueryBuilderBase.cpp  SqlConditionalQueryBuilderBase.h  SqlCreateRule.h  SqlCreateTable.cpp  SqlCreateTable.h  SqlDelete.h  SqlDeleteQueryBuilder.cpp  SqlDeleteQueryBuilder.h  SqlExceptions.h  SqlGlobal.h  SqlGrantPermission.h  SqlGraphviz.h  SqlInsert.h  SqlInsertQueryBuilder.cpp  SqlInsertQueryBuilder.h  SqlInternals_p.h  SqlMonitor.cpp  SqlMonitor.h  SqlQuery.cpp  SqlQuery.h  SqlQueryBuilderBase.cpp  SqlQueryBuilderBase.h  SqlQueryCache.cpp  SqlQueryCache.h  SqlQueryManager.cpp  SqlQueryManager.h  SqlQueryWatcher.cpp  SqlQueryWatcher.h  SqlResources.qrc  (+18 more)
procedures/pre-create/: ACLTriggerFunctions.tsp
tests/: CMakeLists.txt  NewSchema.h  OldSchema.h  README.TXT  README.tests  createruletest.cpp  createtabletest.cpp  deletequerybuildertest.cpp  deletetest.cpp  insertquerybuildertest.cpp  inserttest.cpp  schematest.cpp  schemaupdatetest.cpp  selectquerybuildertest.cpp  selecttest.cpp  sqlutilstest.cpp  test_utils.h  testbase.cpp  testbase.h  testschema.cpp  testschema.h  updatequerybuildertest.cpp
tests/schemaUpdates/: 1.sql  2.sql  schemaUpdates.qrc
